--- a/index.html
+++ b/index.html
@@ -3,9 +3,66 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <time>Meu Projeto de Matematica II</time>
+    <title>Meu Projeto de Matematica II</title>
+    <style>
+        body{
+            margin: 0;
+            font-family: Arial, sans-serif;
+            background-color: #000033;
+            color: white;
+        }
+        header {
+            backgroud-color: navy;
+            padding: 20px;
+            text-slign: center;
+            font-size: 2em;
+            font-wieght: bold;
+        }
+        .banner{
+            background-color: darkred;
+            padding: 20px;
+            display: flex;
+            align-items: center;
+            justify-content: sáce-around;
+        }
+        .banner h2{
+            color: cyan;
+            font-size: 1.8em;
+        }
+        .videos{
+            display: flex;
+            gap: 15px;
+            flw-wrap;
+        }
+        .video-grid iframe{
+            border: none;
+        }
+    </style>
 </head>
 <body>
+    <header>
+        EducaFlix
+    </header>
+    
+    <section class="banner">
+        <div>
+            <h2>O Melhor Conteudo de Araras</h2>
+            <p>#araraazul#aves</p>
+        </div>
+        <iframe width="400" height="225"
+            scr="https://youtu.be/fCNf679GOmQ?si=cE_XLSqj2Ysyh2Mq"
+            title="Video princial" allowfullscreen></iframe>
+    </section>
+
+    <section class="videos">
+        <h2>Videos Recomendados</h2>
+        <div class="video-grid">
+            <iframe width="250" height="140"
+                scr="https://youtu.be/ZwSR5D5_ffc?si=JAVW0XYu-ntPhjSd" title="Video 1"></iframe>
+            <iframe width="250" height="140"
+                scr="https://youtu.be/obIrQAMu8DA?si=ib7H0qlMglZpBKnV" title="Video 2"></iframe>
+            <iframe width="250" height="140" scr="https://youtu.be/tIq7kHjaMls?si=8I-Tnc6aIA3hpELU"
+                title
     <h1>Meu Tema Arara Azul</h1>
     <p>As araras-azuis são aves sociais que vivem em família, bandos ou grupos. É difícil encontrá-las sozinha em vida livre. Elas são aves conspícuas e apresentam certa fidelidade aos locais de alimentação e reprodução. Jovens e casais não reprodutivos se reúnem em dormitórios, que além de proteção, parecem funcionar como verdadeiros “centros de troca de informações”. Estão entre as aves mais inteligentes do grupo das aves.</p>
     <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fbrasilescola.uol.com.br%2Fanimais%2Farara-azul.htm&psig=AOvVaw1sRPv-YSUUFv142oBxHsaw&ust=1755095544117000&source=images&cd=vfe&opi=89978449&ved=0CBUQjRxqFwoTCKDo2sW-hY8DFQAAAAAdAAAAABAR" width="400">
