--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <p>#araraazul#aves</p>
         </div>
         <iframe width="400" height="225"
-            scr="https://youtu.be/fCNf679GOmQ?si=cE_XLSqj2Ysyh2Mq"
+            scr="<iframe width="560" height="315" src="https://www.yout<iframe width="560" height="315" src="https://www.youtube.com/embed/urJwXVW3YQ4?si=NOB4bRqEgoD51oFE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>ube.com/embed/urJwXVW3YQ4?si=NOB4bRqEgoD51oFE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             title="Video princial" allowfullscreen></iframe>
     </section>
 
@@ -68,4 +68,4 @@
     <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fbrasilescola.uol.com.br%2Fanimais%2Farara-azul.htm&psig=AOvVaw1sRPv-YSUUFv142oBxHsaw&ust=1755095544117000&source=images&cd=vfe&opi=89978449&ved=0CBUQjRxqFwoTCKDo2sW-hY8DFQAAAAAdAAAAABAR" width="400">
     <iframe width="560" height="315" src="https://www.youtube.com/embed/g_uKuYTauiE?si=pQMVs_YOdla6dUNJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </body>
-</html>
+</html
