--- a/index.html
+++ b/index.html
@@ -58,14 +58,14 @@
         <h2>Videos Recomendados</h2>
         <div class="video-grid">
             <iframe width="250" height="140"
-                scr="https://youtu.be/ZwSR5D5_ffc?si=JAVW0XYu-ntPhjSd" title="Video 1"></iframe>
+                scr="<iframe width="560" height="315" src="https://www.youtube.com/embed/XiaqnEXDbUY?si=RUSV1dr32cyGzNZi" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             <iframe width="250" height="140"
-                scr="https://youtu.be/obIrQAMu8DA?si=ib7H0qlMglZpBKnV" title="Video 2"></iframe>
+                scr="<iframe width="560" height="315" src="https://www.youtube.com/embed/g_uKuYTauiE?si=x-gBOM-8oSsI6Sj4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             <iframe width="250" height="140" scr="https://youtu.be/tIq7kHjaMls?si=8I-Tnc6aIA3hpELU"
                 title
     <h1>Meu Tema Arara Azul</h1>
     <p>As araras-azuis são aves sociais que vivem em família, bandos ou grupos. É difícil encontrá-las sozinha em vida livre. Elas são aves conspícuas e apresentam certa fidelidade aos locais de alimentação e reprodução. Jovens e casais não reprodutivos se reúnem em dormitórios, que além de proteção, parecem funcionar como verdadeiros “centros de troca de informações”. Estão entre as aves mais inteligentes do grupo das aves.</p>
-    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fbrasilescola.uol.com.br%2Fanimais%2Farara-azul.htm&psig=AOvVaw1sRPv-YSUUFv142oBxHsaw&ust=1755095544117000&source=images&cd=vfe&opi=89978449&ved=0CBUQjRxqFwoTCKDo2sW-hY8DFQAAAAAdAAAAABAR" width="400">
+    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fportalamazonia.com%2Famazonia-de-a-a-z%2Farara-azul%2F&psig=AOvVaw0TgozbMvvjeo987zcHiUf6&ust=1756305019694000&source=images&cd=vfe&opi=89978449&ved=0CBUQjRxqFwoTCMCbzJrYqI8DFQAAAAAdAAAAABBS
     <iframe width="560" height="315" src="https://www.youtube.com/embed/g_uKuYTauiE?si=pQMVs_YOdla6dUNJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </body>
 </html
