--- a/index.html
+++ b/index.html
@@ -1,71 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meu Projeto de Matematica II</title>
-    <style>
-        body{
-            margin: 0;
-            font-family: Arial, sans-serif;
-            background-color: #000033;
-            color: white;
-        }
-        header {
-            backgroud-color: navy;
-            padding: 20px;
-            text-slign: center;
-            font-size: 2em;
-            font-wieght: bold;
-        }
-        .banner{
-            background-color: darkred;
-            padding: 20px;
-            display: flex;
-            align-items: center;
-            justify-content: sáce-around;
-        }
-        .banner h2{
-            color: cyan;
-            font-size: 1.8em;
-        }
-        .videos{
-            display: flex;
-            gap: 15px;
-            flw-wrap;
-        }
-        .video-grid iframe{
-            border: none;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Meu Projeto Sobre Universo</title>
 </head>
 <body>
-    <header>
-        Araras azuis
-    </header>
-    
-    <section class="banner">
-        <div>
-            <h2>O Melhor Conteudo de Araras</h2>
-            <p>#araraazul#aves</p>
-        </div>
-        <iframe width="400" height="225"
-            scr="<iframe width="560" height="315" src="https://www.yout<iframe width="560" height="315" src="https://www.youtube.com/embed/urJwXVW3YQ4?si=NOB4bRqEgoD51oFE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>ube.com/embed/urJwXVW3YQ4?si=NOB4bRqEgoD51oFE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-            title="Video princial" allowfullscreen></iframe>
-    </section>
-
-    <section class="videos">
-        <h2>Videos Recomendados</h2>
-        <div class="video-grid">
-            <iframe width="250" height="140"
-                scr="<iframe width="560" height="315" src="https://www.youtube.com/embed/XiaqnEXDbUY?si=RUSV1dr32cyGzNZi" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-            <iframe width="250" height="140"
-                scr="<iframe width="560" height="315" src="https://www.youtube.com/embed/g_uKuYTauiE?si=x-gBOM-8oSsI6Sj4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-            <iframe width="250" height="140" scr="https://youtu.be/tIq7kHjaMls?si=8I-Tnc6aIA3hpELU"
-                title
-    <h1>Meu Tema Arara Azul</h1>
-    <p>As araras-azuis são aves sociais que vivem em família, bandos ou grupos. É difícil encontrá-las sozinha em vida livre. Elas são aves conspícuas e apresentam certa fidelidade aos locais de alimentação e reprodução. Jovens e casais não reprodutivos se reúnem em dormitórios, que além de proteção, parecem funcionar como verdadeiros “centros de troca de informações”. Estão entre as aves mais inteligentes do grupo das aves.</p>
-    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fportalamazonia.com%2Famazonia-de-a-a-z%2Farara-azul%2F&psig=AOvVaw0TgozbMvvjeo987zcHiUf6&ust=1756305019694000&source=images&cd=vfe&opi=89978449&ved=0CBUQjRxqFwoTCMCbzJrYqI8DFQAAAAAdAAAAABBS
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/g_uKuYTauiE?si=pQMVs_YOdla6dUNJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-</body>
-</html
+  <h1>Meu Tema Sobre Universo</h1>
+  <p>Aqui vou explicar e mostrar curiosidades sobre o Universo</p>
+  <img src="https://imagens.ebc.com.br/gBQ9g1ynmdlsdq5WcqBIsyVsSPo=/1170x700/smart/https://agenciabrasil.ebc.com.br/sites/default/files/thumbnails/image/2022-07-12t153909z_1195415051_rc2bav985k5j_rtrmadp_3_space-exploration-telescope.jpg?itok=C1mEJxR3" alt="Pilares da Criação" width="400"> 
+</body>    
+</html>
